# GoIT_HW_02

./: Dockerfile  HW_11.ipynb  comands.py  pyproject.toml  seed.py  task_system.sql
HW_NoSQL/: create_db.py  main.py
HW_SQL/: create_db.py
